# shard-core

./: .gitignore  LICENSE-MIT-0  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
src/shard_core/: __init__.py  cli.py  core.py  slip39.py  wizard.py
tests/: test_shard_core.py
